# aoc

./: .gitignore  .gitmodules
2019/rust/: Cargo.toml
2019/scala/: build.sbt
2019/scala/src/main/scala/aoc/: Day1Solution.scala  Solution.scala
2020/rust/: Cargo.toml
2020/rust/src/: main.rs
2020/rust/src/solution/: day1.rs  day2.rs  day3.rs  day4.rs  mod.rs
2020/scala/src/main/scala/aoc/: AocCli.scala  Day1Solution.scala  Day2Solution.scala  Main.scala  Solution.scala
2020/scala/src/test/scala/: Day1SolutionSpec.scala  Day2SolutionSpec.scala
2021/rust/: Cargo.toml
2021/rust/src/: main.rs
2021/rust/src/solution/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
2022/rust/: Cargo.toml
2022/rust/src/: main.rs
2022/rust/src/solution/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  mod.rs
2023/python/: .python-version
2023/python/aoc/: __main__.py  cli.py
2023/python/aoc/solution/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
2024/rust/: Cargo.toml
2024/rust/src/: main.rs  util.rs
2024/rust/src/solution/: day1.rs  day10.rs  day11.rs  day12.rs  day16.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
rust/src/solution/: day2.rs
scala/src/main/scala/aoc/: AocCli.scala  Main.scala  Solution.scala
scala/src/test/scala/: Day1SolutionSpec.scala
src/: .main.rs.swp  main.rs
src/solution/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  intcode.rs  mod.rs
