[package]
name = "aoc"
version = "0.1.0"
authors = ["nmaraston <nick.maraston@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
regex = "1.11.1"
thiserror = "2.0.3"
